# robomaster-particle-filters

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
.github/workflows/: build.yml
demos/: interactive_fast_plate_orbit_filter_demo.py  interactive_plate_orbit_filter_demo.py  interactive_plate_orbit_v2_filter_demo.py
include/fast_plate_orbit/: observation.h  observed_plate.h  observed_plate_orbit_builder.h  particle_filter_configuration.h  predicted_plate.h  prediction.h
include/plate_orbit/: observation.h  observed_plate.h  observed_plate_orbit_builder.h  particle_filter_configuration.h  predicted_plate.h  prediction.h
include/plate_orbit_v2/: init.h  observation.h  observed_plate.h  observed_plate_orbit.h  observed_plate_orbit_builder.h  particle_filter.h  particle_filter_configuration.h  particle_filter_configuration_parameters.h  predicted_plate.h  prediction.h
include/util/: random_variable_sampler.h
src/fast_plate_orbit/: particle_filter.cu
src/plate_orbit/: particle_filter.cu
src/plate_orbit_v2/: init.cc  particle_filter.cu
src/robomaster_particle_filters/: __init__.py  __init__.pyi  plate_orbit_v2.pyi  robomaster_particle_filters.cc
